--- a/src/app/pages/curso/container/cursos/cursos.component.html
+++ b/src/app/pages/curso/container/cursos/cursos.component.html
@@ -1,3 +1,3 @@
-<p>cursos works!</p>
-<app-list-cursos [cursos]="cursos" (onNew)="onNewProduct($event)"></app-list-cursos>
+
+<app-list-cursos [cursos]="cursos" (onNew)="onNewProduct($event)" (onDelete)="delete($event)" (onEdit)="edit($event)"></app-list-cursos>
 
